# opencode-share

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
migrations/: 001_initial.sql
src/: main.rs  middleware.rs  models.rs
src/core/: mod.rs  share.rs
src/database/: mod.rs
src/routes/: api.rs  mod.rs  share.rs
static/: share.css  share.js
templates/: share.html
tests/: api_test.rs  share_service_test.rs
